# optimisationRefactoring

./: Vagrantfile
optimisationRefactoring/: README
optimisationRefactoring/CFD/: tapenade3.11.tar
optimisationRefactoring/UbendOptimisation/: CADCFDOptimisation.h  CMakeLists.txt  OptimisationState.h  Settings.h  hdmf5IO.h
optimisationRefactoring/UbendOptimisation/lBFGSb/: x.lbfgsb2
optimisationRefactoring/differentiatedCAD/ADOL-C-2.5.2/: Makefile  adolclib.pc  libtool
optimisationRefactoring/differentiatedCAD/ad-plugin/: env.bat
optimisationRefactoring/differentiatedCAD/ad-plugin/msvc/: ad-plugin.sln  ad-plugin.vcxproj  ad-plugin.vcxproj.filters
optimisationRefactoring/differentiatedCAD/ad-plugin/test/: DrawAppliInit
optimisationRefactoring/differentiatedCAD/adol-c/: aclocal.m4  adolc.pc  configure
optimisationRefactoring/differentiatedCAD/adol-c/ADOL-C/: Makefile  Makefile.in  dummy.lo
optimisationRefactoring/differentiatedCAD/occt-min-topo-src/: CMakeLists.txt
optimisationRefactoring/testCase_oxford/: u-bend-Mladen-initial.json  ubend.2.msh
optimisationRefactoring/testCase_oxford/projected_20/: solution.xdmf_mesh.h5  ubend.1.msh
refactoringOptimisation/UbendOptimisation/: CADCFDOptimisation.cxx  CADCFDOptimisation_NSPCC.cpp  CADCFDOptimisation_NSPCC.h  ConjugateGradient.h  MgoptSolver.h  NSPCC.cpp  NSPCC.h  NSPCC_Cases_Run.h  OCCTDataProvider.cxx  OCCTDataProvider.h  main.cpp
refactoringOptimisation/UbendOptimisation/lBFGSb/: routines.f  x.lbfgsb1  x.lbfgsb3
refactoringOptimisation/differentiatedCAD/ADOL-C-2.5.2/: config.status
refactoringOptimisation/differentiatedCAD/ADOL-C-2.5.2/ADOL-C/: Makefile
refactoringOptimisation/differentiatedCAD/ad-plugin/: draw.bat  msbuild_x64.bat  msvc.bat  runtests_release_x64.bat
refactoringOptimisation/differentiatedCAD/adol-c/: Makefile  Makefile.in  config.status  libtool
refactoringOptimisation/differentiatedCAD/adol-c/ADOL-C/: libadolc.la
refactoringOptimisation/differentiatedCAD/occt-min-topo-src/adm/: CMPLRS
refactoringOptimisation/testCase_oxford/: adjoint.cnv  primal.cnv
refactoringOptimisation/testCase_oxford/projected_20/: solution.xdmf  ubend.3.msh
(+1117 files in other folders)
